--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         <a href="/"
           ><img src="./images/header__logo.png" alt="logo" class="header__logo"
         /></a>
-        <a href="" class="header__lang-link">Ru</a>
-        <a href="" class="header__lang-link">En</a>
+        <div>
+          <a href="" class="header__lang-link">Ru</a>
+          <a href="" class="header__lang-link">En</a>
+        </div>
       </header>
       <main class="main">
         <section class="lead">
@@ -23,8 +25,7 @@
             Настоящая страна не в выпусках новостей, а здесь.
           </h2>
           <div class="lead__image">
-           <img src="./images/lead__image.png"
-            alt="верхняя полка">
+            <img src="./images/lead__image.png" alt="верхняя полка" />
           </div>
           <p class="lead__caption">ваша полка — верхняя</p>
         </section>
@@ -115,123 +116,167 @@
         <section class="places">
           <div class="place">
             <h3 class="place__title">Куршская коса</h3>
+            <div class="place__website">
+              <p class="website__url-heading">URL</p>
+              <a href="http://park-kosa.ru" class="website__link"
+                >park-kosa.ru</a
+              >
+            </div>
             <img
               src="./images/place__imagekyrkosa.png"
               alt="Куршская коса"
               class="place__image"
             />
-            <div class="place__website"></div>
-            <p class="place__paragraph">
-              Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
-              горизонта — спокойного Куршского залива с одной стороны и
-              подёрнутого рябью волн Балтийского моря с другой. Уникальная
-              природная зона на краю российского анклава.
-            </p>
-            <p class="place__paragraph">
-              На этом Калининградская область не заканчивается. Для
-              путешественника и исследователя там же по соседству — самая
-              западная точка России, Балтийская коса, — и немецкое наследие
-              россыпи небольших приморских городов. Атмосфера здешних мест
-              исключает суету, окуная в спокойствие природы и запах стального,
-              прохладного моря.
-            </p>
+            <div>
+              <p class="place__paragraph">
+                Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
+                водных горизонта — спокойного Куршского залива с одной стороны и
+                подёрнутого рябью волн Балтийского моря с другой. Уникальная
+                природная зона на краю российского анклава.
+              </p>
+              <p class="place__paragraph">
+                На этом Калининградская область не заканчивается. Для
+                путешественника и исследователя там же по соседству — самая
+                западная точка России, Балтийская коса, — и немецкое наследие
+                россыпи небольших приморских городов. Атмосфера здешних мест
+                исключает суету, окуная в спокойствие природы и запах стального,
+                прохладного моря.
+              </p>
+            </div>
           </div>
           <div class="place">
             <h3 class="place__title">Кольский</h3>
+            <div class="place__website">
+              <p class="website__url-heading">URL</p>
+              <a
+                href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+                class="website__link"
+                >National Geographic</a
+              >
+            </div>
             <img
               src="./images/place__imagekols.png"
               alt="Кольский"
               class="place__image"
             />
-            <div class="place__website"></div>
-            <p class="place__paragraph">
-              Почти весь полуостров находится за Полярным кругом. Саамская
-              тундра, от которой на юг — тайга, а на север — Ледовитый океан,
-              прикидывающийся Баренцевым морем.
-            </p>
-            <p class="place__paragraph">
-              Возможно, вы смотрели Звягинцева и даже слышали историю
-              арктического фестиваля в Териберке. Возможно, слово «Хибины» не
-              осталось под снегом школьных воспоминаний об уроках географии.
-              Возможно, вы не интересовались пронизывающей земную кору
-              сверхглубокой скважиной, а от апатитов вас давно накрывает апатия.
-              Но ваша мечта увидеть северное сияние начинает сбываться с билетом
-              в Мурманск.
-            </p>
+            <div>
+              <p class="place__paragraph">
+                Почти весь полуостров находится за Полярным кругом. Саамская
+                тундра, от которой на юг — тайга, а на север — Ледовитый океан,
+                прикидывающийся Баренцевым морем.
+              </p>
+              <p class="place__paragraph">
+                Возможно, вы смотрели Звягинцева и даже слышали историю
+                арктического фестиваля в Териберке. Возможно, слово «Хибины» не
+                осталось под снегом школьных воспоминаний об уроках географии.
+                Возможно, вы не интересовались пронизывающей земную кору
+                сверхглубокой скважиной, а от апатитов вас давно накрывает
+                апатия. Но ваша мечта увидеть северное сияние начинает сбываться
+                с билетом в Мурманск.
+              </p>
+            </div>
           </div>
           <div class="place">
             <h3 class="place__title">Алтай</h3>
+            <div class="place__website">
+              <p class="website__url-heading">URL</p>
+              <a
+                href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+                class="website__link"
+                >Facebook</a
+              >
+            </div>
             <img
               src="./images/place__imagealtai.png"
               alt="Алтай"
               class="place__image"
             />
-            <div class="place__website"></div>
-            <p class="place__paragraph">
-              Алтай — одно из красивейших мест в России. В первую очередь из-за
-              гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
-              соснами, горные реки и озёра. А если вы откроете в автомобиле
-              окна, сможете познакомиться с невидимым чудом здешних мест —
-              горным воздухом.
-            </p>
-            <p class="place__paragraph">
-              Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
-              Так вы увидите всё разнообразие местной флоры и фауны. По лесам
-              Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся
-              косули. И знаменитые манулы — тоже обитатели Алтайского края.
-            </p>
+            <div>
+              <p class="place__paragraph">
+                Алтай — одно из красивейших мест в России. В первую очередь
+                из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
+                соснами, горные реки и озёра. А если вы откроете в автомобиле
+                окна, сможете познакомиться с невидимым чудом здешних мест —
+                горным воздухом.
+              </p>
+              <p class="place__paragraph">
+                Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
+                Так вы увидите всё разнообразие местной флоры и фауны. По лесам
+                Алтая бродят лоси, над хребтами летают орлы, а на равнинах
+                пасутся косули. И знаменитые манулы — тоже обитатели Алтайского
+                края.
+              </p>
+            </div>
           </div>
           <div class="place">
             <h3 class="place__title">Зимний Байкал</h3>
+            <div class="place__website">
+              <p class="website__url-heading">URL</p>
+              <a href="https://vk.com/baikalmile" class="website__link"
+                >https://vk.com/baikalmile</a
+              >
+            </div>
             <img
               src="./images/_place_imagebaikal.png"
               alt="Зимний Байкал"
               class="place__image"
             />
-            <div class="place__website"></div>
-            <p class="place__paragraph">
-              Всем известен Байкал как крупнейшее озеро в мире. Многие также
-              знают, что это самый большой источник пресной воды и одно из
-              красивейших мест в России.
-            </p>
-            <p class="place__paragraph">
-              Конечно, это всё так. Но Байкал ещё идеальное место
-              для соревнований по скийорингу. Это такой вид спорта, когда лыжник
-              привязывает себя к мотоциклу, и тандем старается развить как можно
-              бóльшую скорость на льду. В марте 2019 года на фестивале
-              «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
-            </p>
+            <div>
+              <p class="place__paragraph">
+                Всем известен Байкал как крупнейшее озеро в мире. Многие также
+                знают, что это самый большой источник пресной воды и одно из
+                красивейших мест в России.
+              </p>
+              <p class="place__paragraph">
+                Конечно, это всё так. Но Байкал ещё идеальное место
+                для соревнований по скийорингу. Это такой вид спорта, когда
+                лыжник привязывает себя к мотоциклу, и тандем старается развить
+                как можно бóльшую скорость на льду. В марте 2019 года на
+                фестивале «Байкальская миля» был поставлен мировой рекорд —
+                197.011 км/ч.
+              </p>
+            </div>
           </div>
           <div class="place">
             <h3 class="place__title">Карелия</h3>
+            <div class="place__website">
+              <p class="website__url-heading">URL</p>
+              <a href="http://vodlozero.ru" class="website__link"
+                >http://vodlozero.ru/</a
+              >
+            </div>
             <img
               src="./images/place__imagekarelia.png"
               alt="Карелия"
               class="place__image"
             />
-            <div class="place__website"></div>
-            <p class="place__paragraph">
-              Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
-              сибирская лиственница не растёт западнее Водлозера. Зато здесь она
-              вымахивает на 30 метров — леса карельских национальных парков
-              из-за непроходимых болот никогда не знали топора. Некоторым соснам
-              уже больше чем полтысячелетия. Прикоснитесь к живому существу,
-              видевшему солнце раньше, чем увидал его Иван Грозный. В
-              девственном лесу на сотню километров не встретишь тропы. А на
-              редких тропинках деревья в паре метров от земли помечены
-              медвежьими когтями. Чтобы все знали, кто тут хозяин.
-            </p>
+            <div>
+              <p class="place__paragraph">
+                Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
+                сибирская лиственница не растёт западнее Водлозера. Зато здесь
+                она вымахивает на 30 метров — леса карельских национальных
+                парков из-за непроходимых болот никогда не знали топора.
+                Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к
+                живому существу, видевшему солнце раньше, чем увидал его Иван
+                Грозный. В девственном лесу на сотню километров не встретишь
+                тропы. А на редких тропинках деревья в паре метров от земли
+                помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
+              </p>
+            </div>
           </div>
         </section>
         <section class="cover">
-          <h2 class="cover__title"></h2>
-          <h3 class="cover__subtitle"></h3>
-          <div class="cover__overlay"></div>
-          <img
-            src="./images/cover.png"
-            alt="Байкал на собаках"
-            class="cover__background"
-          />
+            <h2 class="cover__title">До Байкала «на собаках»</h2>
+            <h3 class="cover__subtitle">
+              По мотивам учебной темы о Транссибе — путешествие от столицы до
+              Байкала на электричках.
+            </h3>
+            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay"></a>
+            <img
+              src="./images/cover__background.png"
+              alt="Байкал на собаках"
+              class="cover__background"
+            />
         </section>
       </main>
       <footer class="footer">
