--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </header>
 
       <main class="main">
-        
+        <!--
         <section class="lead">
           <h1 class="lead__title">Путешествия<br />по России</h1>
           <h2 class="lead__subtitle">
@@ -270,7 +270,7 @@
             </div>
           </div>
         </section>
-        <!--
+      -->
         <section class="cover">
           <a
             href="https://stampsy.com/na-elektrichkakh-do-baikala"
@@ -289,7 +289,7 @@
             Байкала на электричках.
           </h3>
         </section>
-      --></main>
+      </main>
       <footer class="footer">
         <ul class="footer__links">
           <li>
