--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       </header>
 
       <main class="main">
-        <!--
         <section class="lead">
           <h1 class="lead__title">Путешествия<br />по России</h1>
           <h2 class="lead__subtitle">
@@ -270,25 +269,12 @@
             </div>
           </div>
         </section>
-      -->
-        <section class="cover">
-          <a
-            href="https://stampsy.com/na-elektrichkakh-do-baikala"
-            class="cover__overlay"
-          ></a>
-          <img
-            class="cover__background"
-            src="./images/cover__background.png"
-            alt="Байкал на собаках"
-            width="100%"
-            height="100%"
-          />
+      <section class="cover"> 
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
           <h2 class="cover__title">До Байкала «на собаках»</h2>
-          <h3 class="cover__subtitle">
-            По мотивам учебной темы о Транссибе — путешествие от столицы до
-            Байкала на электричках.
-          </h3>
-        </section>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+        </a>
+      </section>
       </main>
       <footer class="footer">
         <ul class="footer__links">
