--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <li>Аэропортов 241</li>
           </ul>
         </section>
-        <section class="photo-grid">
+        <section class="photo-grid" aria-label="Фото">
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item1.png"
