--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./pages/index.css" />
-    <title>Document</title>
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <link rel="stylesheet" href="./pages/index.css">
+    <title>Путешествия по России</title>
   </head>
   <body class="body">
     <div class="page">
       <header class="header">
         <a href="/"
           ><img src="./images/header__logo.png" alt="logo" class="header__logo"
-        /></a>
+        ></a>
         <div class="header__lang-links">
           <a href="" class="header__lang-link">Ru</a>
           <a href="" class="header__lang-link">En</a>
@@ -21,15 +21,15 @@
 
       <main class="main">
         <section class="lead">
-          <h1 class="lead__title">Путешествия<br />по России</h1>
+          <h1 class="lead__title">Путешествия<br >по России</h1>
           <h2 class="lead__subtitle">
-            Настоящая страна не в выпусках<br />новостей, а здесь.
+            Настоящая страна не в выпусках<br >новостей, а здесь.
           </h2>
           <img
             src="./images/lead__image.png"
             alt="верхняя полка"
             class="lead__image"
-          />
+          >
           <p class="lead__caption">ваша полка — верхняя</p>
         </section>
 
@@ -60,62 +60,62 @@
             class="photo-grid__item"
             src="./images/photo-grid__item1.png"
             alt="фото1"
-          />
+          >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item2.png"
             alt="фото2"
-          />
+          >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item3.png"
             alt="фото3"
-          />
+          >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item4.png"
             alt="фото4"
-          />
+          >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item5.png"
             alt="фото5"
-          />
+          >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item6.png"
             alt="фото6"
-          />
+          >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item7.png"
             alt="фото7"
-          />
+          >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item8.png"
             alt="фото8"
-          />
+          >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item9.png"
             alt="фото9"
-          />
+          >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item10.png"
             alt="фото10"
-          />
+          >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item11.png"
             alt="фото11"
-          />
+          >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item12.png"
             alt="фото12"
-          />
+          >
         </section>
         <section class="places">
           <div class="place">
@@ -130,7 +130,7 @@
               src="./images/place__imagekyrkosa.png"
               alt="Куршская коса"
               class="place__image"
-            />
+            >
             <div>
               <p class="place__paragraph">
                 Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
@@ -162,7 +162,7 @@
               src="./images/place__imagekols.png"
               alt="Кольский"
               class="place__image"
-            />
+            >
             <div>
               <p class="place__paragraph">
                 Почти весь полуостров находится за Полярным кругом. Саамская
@@ -194,7 +194,7 @@
               src="./images/place__imagealtai.png"
               alt="Алтай"
               class="place__image"
-            />
+            >
             <div>
               <p class="place__paragraph">
                 Алтай — одно из красивейших мест в России. В первую очередь
@@ -224,7 +224,7 @@
               src="./images/_place_imagebaikal.png"
               alt="Зимний Байкал"
               class="place__image"
-            />
+            >
             <div>
               <p class="place__paragraph">
                 Всем известен Байкал как крупнейшее озеро в мире. Многие также
@@ -253,7 +253,7 @@
               src="./images/place__imagekarelia.png"
               alt="Карелия"
               class="place__image"
-            />
+            >
             <div>
               <p class="place__paragraph">
                 Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
