--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="page">
       <header class="header">
         <a href="/"
-          ><img src="./images/header__logo.png" alt="logo" class="header__logo"
+          ><img src="./images/header__logo.png" alt="Логотип" class="header__logo"
         ></a>
         <div class="header__lang-links">
           <a href="" class="header__lang-link">Ru</a>
@@ -21,9 +21,9 @@
 
       <main class="main">
         <section class="lead">
-          <h1 class="lead__title">Путешествия<br >по России</h1>
+          <h1 class="lead__title">Путешествия по России</h1>
           <h2 class="lead__subtitle">
-            Настоящая страна не в выпусках<br >новостей, а здесь.
+            Настоящая страна не в выпусках новостей, а здесь.
           </h2>
           <img
             src="./images/lead__image.png"
