--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <section class="places">
           <div class="place">
             <h3 class="place__title">Куршская коса</h3>
-            <div class="place__website">
+            <div class="website place__website">
               <p class="website__url-heading">URL</p>
               <a href="http://park-kosa.ru" class="website__link"
                 >park-kosa.ru</a
@@ -150,7 +150,7 @@
           </div>
           <div class="place">
             <h3 class="place__title">Кольский</h3>
-            <div class="place__website">
+            <div class="website place__website">
               <p class="website__url-heading">URL</p>
               <a
                 href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
@@ -182,7 +182,7 @@
           </div>
           <div class="place">
             <h3 class="place__title">Алтай</h3>
-            <div class="place__website">
+            <div class="website place__website">
               <p class="website__url-heading">URL</p>
               <a
                 href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
@@ -214,7 +214,7 @@
           </div>
           <div class="place">
             <h3 class="place__title">Зимний Байкал</h3>
-            <div class="place__website">
+            <div class="website place__website">
               <p class="website__url-heading">URL</p>
               <a href="https://vk.com/baikalmile" class="website__link"
                 >https://vk.com/baikalmile</a
@@ -243,7 +243,7 @@
           </div>
           <div class="place">
             <h3 class="place__title">Карелия</h3>
-            <div class="place__website">
+            <div class="website place__website">
               <p class="website__url-heading">URL</p>
               <a href="http://vodlozero.ru" class="website__link"
                 >http://vodlozero.ru/</a
