--- a/index.html
+++ b/index.html
@@ -4,37 +4,37 @@
     <meta charset="UTF-8" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <link rel="stylesheet" href="./pages/index.css">
+    <link rel="stylesheet" href="./pages/index.css" >
     <title>Путешествия по России</title>
   </head>
   <body class="body">
     <div class="page">
       <header class="header">
         <a href="/"
-          ><img src="./images/header__logo.png" alt="Логотип" class="header__logo"
+          ><img src="./images/__logo.svg" alt="Россия" class="header__logo"
         ></a>
         <div class="header__lang-links">
-          <a href="" class="header__lang-link">Ru</a>
-          <a href="" class="header__lang-link">En</a>
+          <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
+          <a href="#" class="header__lang-link">En</a>
         </div>
       </header>
 
       <main class="main">
         <section class="lead">
-          <h1 class="lead__title">Путешествия по России</h1>
-          <h2 class="lead__subtitle">
-            Настоящая страна не в выпусках новостей, а здесь.
-          </h2>
+          <h1 class="lead__title">Путешествия по&nbsp;России</h1>
+          <p class="lead__subtitle">
+            Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.
+          </p>
           <img
             src="./images/lead__image.png"
-            alt="верхняя полка"
+            alt="Путешествия по России"
             class="lead__image"
           >
           <p class="lead__caption">ваша полка — верхняя</p>
         </section>
 
         <section class="intro">
-          <h2 class="intro__title">Чего мы там не видели?</h2>
+          <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
           <p class="intro__text">
             По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только
             36% планируют провести отпуск в родной стране. Мол, чего мы тут,
@@ -48,23 +48,31 @@
             вашего отпуска.
           </p>
           <ul class="intro__list">
-            <li>Часовых поясов 11</li>
-            <li>Объектов природного наследия ЮНЕСКО 12</li>
-            <li>Объектов культурного наследия ЮНЕСКО 16</li>
-            <li>Природных заповедников 105</li>
-            <li>Аэропортов 241</li>
+            <li>Часовых поясов <span class="intro__number">11</span></li>
+            <li>
+              Объектов природного наследия ЮНЕСКО
+              <span class="intro__number">12</span>
+            </li>
+            <li>
+              Объектов культурного наследия ЮНЕСКО
+              <span class="intro__number">16</span>
+            </li>
+            <li>
+              Природных заповедников <span class="intro__number">105</span>
+            </li>
+            <li>Аэропортов <span class="intro__number">241</span></li>
           </ul>
         </section>
-        <section class="photo-grid" aria-label="Фото">
+        <section class="photo-grid" aria-label="Фото мест">
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item1.png"
-            alt="фото1"
+            alt="фото места"
           >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item2.png"
-            alt="фото2"
+            alt="фото места"
           >
           <img
             class="photo-grid__item"
@@ -74,12 +82,12 @@
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item4.png"
-            alt="фото4"
+            alt="фото места"
           >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item5.png"
-            alt="фото5"
+            alt="фото места"
           >
           <img
             class="photo-grid__item"
@@ -89,42 +97,40 @@
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item7.png"
-            alt="фото7"
+            alt="фото места"
           >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item8.png"
-            alt="фото8"
+            alt="фото места"
           >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item9.png"
-            alt="фото9"
+            alt="фото места"
           >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item10.png"
-            alt="фото10"
+            alt="фото места"
           >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item11.png"
-            alt="фото11"
+            alt="фото места"
           >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item12.png"
-            alt="фото12"
+            alt="фото места"
           >
         </section>
-        <section class="places">
-          <div class="place">
+        <section class="places" aria-label="Места">
+          <article class="place">
             <h3 class="place__title">Куршская коса</h3>
-            <div class="website place__website">
-              <p class="website__url-heading">URL</p>
-              <a href="http://park-kosa.ru" class="website__link"
-                >park-kosa.ru</a
-              >
+            <div class="place__website">
+              <p class="place__url-heading">URL</p>
+              <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
             </div>
             <img
               src="./images/place__imagekyrkosa.png"
@@ -147,14 +153,14 @@
                 прохладного моря.
               </p>
             </div>
-          </div>
-          <div class="place">
+          </article>
+          <article class="place">
             <h3 class="place__title">Кольский</h3>
-            <div class="website place__website">
-              <p class="website__url-heading">URL</p>
+            <div class="place__website">
+              <p class="place__url-heading">URL</p>
               <a
                 href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
-                class="website__link"
+                class="place__link"
                 >National Geographic</a
               >
             </div>
@@ -179,14 +185,14 @@
                 с билетом в Мурманск.
               </p>
             </div>
-          </div>
-          <div class="place">
+          </article>
+          <article class="place">
             <h3 class="place__title">Алтай</h3>
-            <div class="website place__website">
-              <p class="website__url-heading">URL</p>
+            <div class="place__website">
+              <p class="place__url-heading">URL</p>
               <a
                 href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
-                class="website__link"
+                class="place__link"
                 >Facebook</a
               >
             </div>
@@ -211,12 +217,12 @@
                 края.
               </p>
             </div>
-          </div>
-          <div class="place">
+          </article>
+          <article class="place">
             <h3 class="place__title">Зимний Байкал</h3>
-            <div class="website place__website">
-              <p class="website__url-heading">URL</p>
-              <a href="https://vk.com/baikalmile" class="website__link"
+            <div class="place__website">
+              <p class="place__url-heading">URL</p>
+              <a href="https://vk.com/baikalmile" class="place__link"
                 >https://vk.com/baikalmile</a
               >
             </div>
@@ -240,12 +246,12 @@
                 197.011 км/ч.
               </p>
             </div>
-          </div>
-          <div class="place">
+          </article>
+          <article class="place">
             <h3 class="place__title">Карелия</h3>
-            <div class="website place__website">
-              <p class="website__url-heading">URL</p>
-              <a href="http://vodlozero.ru" class="website__link"
+            <div class="place__website">
+              <p class="place__url-heading">URL</p>
+              <a href="http://vodlozero.ru" class="place__link"
                 >http://vodlozero.ru/</a
               >
             </div>
@@ -267,37 +273,66 @@
                 помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
               </p>
             </div>
-          </div>
+          </article>
         </section>
-      <section class="cover"> 
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
-          <h2 class="cover__title">До Байкала «на собаках»</h2>
-          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-        </a>
-      </section>
+        <section class="cover">
+          <a
+            href="https://stampsy.com/na-elektrichkakh-do-baikala"
+            class="cover__link"
+            target="_blank"
+          >
+            <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
+            <p class="cover__subtitle">
+              По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.
+            </p>
+          </a>
+        </section>
       </main>
       <footer class="footer">
-        <ul class="footer__links">
-          <li>
-            <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
-          </li>
-          <li>
-            <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
-          </li>
-          <li>
-            <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
-          </li>
-          <li>
-            <a class="footer__link" href="https://calendar.yandex.ru"
-              >Календарь</a
-            >
-          </li>
-          <li>
-            <a class="footer__link" href="https://travel.yandex.ru"
-              >Путешествия</a
-            >
-          </li>
-        </ul>
+        <nav>
+          <ul class="footer__links">
+            <li>
+              <a
+                class="footer__link"
+                href="https://yandex.ru/maps"
+                target="_blank"
+                >Карты</a
+              >
+            </li>
+            <li>
+              <a
+                class="footer__link"
+                href="https://yandex.ru/pogoda"
+                target="_blank"
+                >Погода</a
+              >
+            </li>
+            <li>
+              <a
+                class="footer__link"
+                href="https://rasp.yandex.ru"
+                target="_blank"
+                >Расписание</a
+              >
+            </li>
+            <li>
+              <a
+                class="footer__link"
+                href="https://calendar.yandex.ru"
+                target="_blank"
+                >Календарь</a
+              >
+            </li>
+            <li>
+              <a
+                class="footer__link"
+                href="https://travel.yandex.ru"
+                target="_blank"
+                >Путешествия</a
+              >
+            </li>
+          </ul>
+        </nav>
         <p class="footer__copyright">&copy; 2020. Ирина</p>
       </footer>
     </div>
