--- a/index.html
+++ b/index.html
@@ -67,62 +67,62 @@
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item1.png"
-            alt="фото места"
+            alt="фото поезда"
           >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item2.png"
-            alt="фото места"
+            alt="фото облаков"
           >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item3.png"
-            alt="фото3"
+            alt="фото волка"
           >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item4.png"
-            alt="фото места"
+            alt="фото леса"
           >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item5.png"
-            alt="фото места"
+            alt="фото льда"
           >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item6.png"
-            alt="фото6"
+            alt="фото моря"
           >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item7.png"
-            alt="фото места"
+            alt="фото гор"
           >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item8.png"
-            alt="фото места"
+            alt="фото знака"
           >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item9.png"
-            alt="фото места"
+            alt="фото холмов"
           >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item10.png"
-            alt="фото места"
+            alt="фото долины"
           >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item11.png"
-            alt="фото места"
+            alt="фото скал"
           >
           <img
             class="photo-grid__item"
             src="./images/photo-grid__item12.png"
-            alt="фото места"
+            alt="фото тумана"
           >
         </section>
         <section class="places" aria-label="Места">
